--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<html>    <head>       <title> Wipro Web App</title>   </head>   <body>       <h1>Welcome to Azure Web App - A2</h1>  </body></html>
+<html>
+    <head>
+       <title> Wipro Web App</title>
+   </head>
+   <body>
+       <h1>Test - Welcome to Azure Web App - A2</h1>
+  </body>
+</html>
